--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -1,1 +1,6 @@
 <h1>Bookmarks#show</h1>
+<p><%= @bookmark.comment %></p>
+<br>
+<%= link_to "Delete",
+  list_bookmark_path(@bookmark), class:'text-danger fw-bold',
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
