--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,3 +1,4 @@
 <h1>Add a new list</h1>
 <%= render "form", list: @list %>
-<%= link_to "Back to homepage", lists_path(@lists)%>
+<br>
+<%= link_to "Back to homepage", lists_path(@list)%>
