--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Lists</h1>
+ <%= link_to "Add a new list", new_list_path(@lists)%>
 <ul>
   <% @lists.each do |list| %>
     <li><%= link_to list.name, list_path(list) %></li>
