--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #4c566a;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -8,5 +8,12 @@
 }
 
 .navbar-lewagon .navbar-brand img {
+  height: 40px;
   width: 40px;
+  border-radius: 50%;
+}
+
+.nav-link {
+  color: white;
+
 }
