adding app watch list to heroku

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -24,7 +24,8 @@
   <%= f.button :submit %>
 <% end %>
   <br>
-  <%= link_to "Back to list", lists_path%>
+  <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
+  <%= link_to "Back to list", root_path%>
   <br>
     <ul class="list-group">
       <% @list.bookmarks.each do |bookmark| %>
