--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,6 +2,7 @@
 <ul>
   <% @lists.each do |list| %>
     <li><%= link_to list.name, list_path(list) %></li>
+    <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
   <% end %>
 </ul>
  <%= link_to "Add a new list", new_list_path(@lists)%>
