--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,7 +1,8 @@
 <h1>Add a new list</h1>
 <%= simple_form_for [@list] do |f| %>
   <%= f.input :name %>
+  <%= f.input :photo, as: :file %>
   <%= f.button :submit %>
 <% end %>
 <br>
-<%= link_to "Back to homepage", lists_path(@list)%>
+<%= link_to "Back to homepage", root_path(@list)%>
